# solafune_precipitation_nowcasting

./: .env.example  .gitignore  CLAUDE.md  EXPERIMENT_REPORT.md  README.md  extract_scores.py  main.py  pyproject.toml  run_extract_scores.sh
configs/: default.yaml
discussion/: -5145640907191768042.ipynb  1247603810468217193.ipynb  approved_geocoding_sources_ja.md  discussion_all.md  geocoding_coordinates_ja.md  round6_findings_2026-07-19_ja.md
doc/: competition_rules.md  data_characteristics_review.md  dataset.md  discussion_insights.md  domain_knowledge_review_2026-07-20.md  exp001_retrospective.md  experiment_tracking_design.md  image_competition_solution_survey_2026-07-17.md  imerg_physics_notes.md  overview.md  public_scores.md  research_survey.md  research_survey_v2.md  research_survey_v3_2026-07-16.md  submission_registry.md  task_tickets.md  tile_overlap_discovery.md
doc/plan/: round5_experiment_plan_2026-07-16.md
doc/score_history/: REPORT.md  cv_runs.csv  experiment_coverage.csv  fold_scores.csv  manifest.json  public_submissions.csv
eda/: 01_data_overview.py  02_deep_dive.py  03_satellite_anomalies.py  README.md
experiments/: README.md
g_eda/: README.md
g_experiments/: EXPERIMENT_PLAN.md  README.md  make_submissions_run.sh  run_variant.sh  singularity_variant.sh  submit_full_pipelines.sh  submit_single_folds_with_analysis.sh
kaggle_model_upload/: singularity_upload.sh
l_eda/: README.md
l_experiments/: README.md
scripts/: README_verify_causal_replay.md  audit_submission_config.py  plot_experiment_scores.py  verify_causal_replay.py
(+615 files in other folders)
