[project]
name = "solafune-precipitation-nowcasting"
version = "0.1.0"
description = "Solafune satellite precipitation nowcasting workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rasterio>=1.4.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "segmentation-models-pytorch>=0.5.0",
    "tifffile>=2024.8.0",
    "timm>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.60.0",
    "wandb>=0.19.0",
]
